# xstatic-angular-vis

./: .gitreview  LICENSE  README.txt  setup.cfg  setup.py
xstatic/pkg/angular_vis/: __init__.py
