[metadata]
name = XStatic-Angular-Vis
description = Angular-Vis 4.16.0 (XStatic packaging standard)
description-file = README.rst
maintainer = xinni.ge
maintainer-email = xinni.ge@ntt.com
home-page = https://github.com/visjs/angular-visjs
keywords = angular_vis xstatic
license = MIT
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
